--- a/Note/202011第4周.md
+++ b/Note/202011第4周.md
@@ -24,13 +24,14 @@
 |0493.翻转对|困难|[题目](https://leetcode-cn.com/problems/reverse-pairs/)|[代码](../Code/0493.翻转对.py)|排序(每日一题)
 |1370.上升下降字符串|简单|[题目](https://leetcode-cn.com/problems/increasing-decreasing-string/)|[代码](../Code/1370.上升下降字符串.py)|排序(每日一题)
 
+
 # 本周总结
 本周是开始做LeetCode的第一周，初步定下了按照tag刷题的顺序。最先开始的tag是滑动窗口。做题途中顺便学习了[滑动窗口](https://www.zhihu.com/question/314669016)、桶排序、[归并排序](https://www.runoob.com/w3cnote/merge-sort.html)的知识。
 * 滑动窗口算法可以用以解决数组/字符串的子元素问题，它可以将嵌套的循环问题，转换为单循环问题，降低时间复杂度。其中比较重要的几点就是：
     * 搞清楚什么时候该移动左指针，什么时候该移动右指针；
     * 分析满足题目要求的条件该如何转换为代码。例如题目：'0424.替换后的最长重复字符'的条件，就可以转换为当前子串中最多的字符个数 `N`、可替换字符个数 `k` 的和是否能够大于等于字串长度 `L` ，也就是 `N+k>=L`。因此，分析题目是十分重要的一环。
 * 归并排序的算法，由于来自每日一题，因此只是大致浏览，日后做到排序题时仍需仔细学习。
-* Python标准库中的collections十分好用，以及其他的工具详见 [Python库](Note\python标准库.md)
+* Python标准库中的collections十分好用，以及其他的工具详见 [Python库](./python标准库.md)
 * 总结大体的做题方法:
     1. 分析题目要求；
     2. 思考实现流程；
