修改标题等级，bug修复

--- a/Note/202102第2周.md
+++ b/Note/202102第2周.md
@@ -5,17 +5,18 @@
  * @LastEditors: Au3C2
  * @LastEditTime: 2021-03-26 10:40:42
 -->
-# 本周关键词
+# 202102第2周
+## 本周关键词
 
 * 每日一题
 * 数组
 * 哈希表
 
-# 做题数据
+## 做题数据
 
 * 困难 2; 中等 2; 简单 3
 
-# 题目及代码
+## 题目及代码
 
 |名字|难度|题目|解答|tag|
 |:-|:-:|:-:|:-:|:-:|
@@ -28,5 +29,5 @@
 |0448.找到所有数组中消失的数字|简单|[题目](https://leetcode-cn.com/problems/find-all-numbers-disappeared-in-an-array/)|[代码](../Code/202102第2周/0448.找到所有数组中消失的数字.md)|数组(每日一题)
 
 
-# 本周总结
+## 本周总结
 本周仅打卡，大部分是简单的数组题，感谢leetcode官方。
