--- a/Code/202109第3周/0212.单词搜索II.md
+++ b/Code/202109第3周/0212.单词搜索II.md
@@ -43,6 +43,7 @@
 
 将匹配到的单词从前缀树中移除，来避免重复寻找相同的单词。
 
+（不用字典树也能做）
 # 代码
 
 ```python
@@ -74,19 +75,19 @@ class Solution:
             ch = board[i1][j1]
 
             nxt = now.children[ch]
-            if nxt.word != "":
+            if nxt.word != "": # 找到一个答案
                 ans.append(nxt.word)
-                nxt.word = ""
+                nxt.word = "" # 将匹配到的单词从前缀树中移除
 
-            if nxt.children:
-                board[i1][j1] = "#"
+            if nxt.children: # 搜索下一步
+                board[i1][j1] = "#" # 置为‘#’避免重复搜索
                 for i2, j2 in [(i1 + 1, j1), (i1 - 1, j1), (i1, j1 + 1), (i1, j1 - 1)]:
                     if 0 <= i2 < m and 0 <= j2 < n:
                         dfs(nxt, i2, j2)
-                board[i1][j1] = ch
+                board[i1][j1] = ch # 恢复原来的字符
 
             if not nxt.children:
-                now.children.pop(ch)
+                now.children.pop(ch) # 移除当前分支
 
         ans = []
         m, n = len(board), len(board[0])
